Adding vhost cuse or user messaging specifics

--- a/test_params.cfg
+++ b/test_params.cfg
@@ -13,10 +13,27 @@ defined within the file 'start-ovs-all-technologies.sh'
 #prefix=""               # Used with RPMs
 prefix=""               # Used with RPMs
 
+
+#
+# Message mechanism used to manipulate the vring.
+#
+# cuse - User space character device and hook to a functional ioctl
+#
+# user - Create a Unix domain socket file through which messages are passed
+#
+# vhost can be user or cuse.  user is preferred as since DPDK 2.2 the majority
+# of development has gone into enhancing vhost-user
+#
+#vhost="cuse" 
+#vhost="user"
+#
+vhost="user"
+
+
 #
 # Adds DB_SOCK as a connection method used by ovsdb-server.
 # connect to the Unix domain server socket named DB_SOCK.
-#export DB_SOCK="$prefix/var/run/openvswitch/db.sock"
+# export DB_SOCK="$prefix/var/run/openvswitch/db.sock"
 #
 export DB_SOCK="$prefix/var/run/openvswitch/db.sock"
 
