Added more shell variables for more flexible configuration and execution, fixed some dpdk configuration bugs, many more comments

--- a/test_params.cfg
+++ b/test_params.cfg
@@ -1,9 +1,12 @@
 ##############################################################################
-This file contains test parameters for programming the throughput tests as 
-defined within the file 'start-ovs-all-technologies.sh'
+#
+# File:         test_params.cfg
+#
+# Description:  This file contains test parameters for programming the 
+#               throughput tests as defined within the file 
+#               'start-ovs-all-technologies.sh'
+#
 ##############################################################################
-
-
 
 
 #
@@ -67,6 +70,8 @@ export DB_SOCK="$prefix/var/run/openvswitch/db.sock"
 #
 #       P_dataplane = kernel or dpdk
 #       V_dataplane = none
+#
+#       This is 'bare metal' testing - no virtual machines
 #
 #       UNIDIRECTIONAL PACKET PATH:
 #       ===========================
@@ -148,31 +153,45 @@ export DB_SOCK="$prefix/var/run/openvswitch/db.sock"
 #network_topology="{(PV),(VP)}"
 #network_topology="{(PV),(VV),(VP)}"
 #
-network_topology="{(PP)}"
-
-
-
-
-
-num_queues_per_port=1
-#cpumask=55
-#cpumask=154
-#cpumask=AA  # logical cpus 1, 3, 5, and 7 the first 4 cores from Node 1
-#cpumask=F
-cpumask=A
-# {(PV),(VP)} = 4 ports.  Then multiply by number of queues per port to get optimum PMD thread count
+# Choose data plane types:
 #
-# 3 queues per port.  4 
-#cpumask=555555
-
 #P_dataplane=kernel
-P_dataplane=dpdk
+#P_dataplane=dpdk
 #P_dataplane=none
 #V_dataplane=kernel
-#V_dataplane=dpdk
-V_dataplane=none
+#V_dataplane=none
+#
+network_topology="{(PV),(VP)}"
+P_dataplane=dpdk
+V_dataplane=dpdk
 
+
+#
+# For multiqueue feature, specify the number of 
+# data queues per port.
+#
+num_queues_per_port=1
+
+
+#
+# This mask indicates how many DPDK PMD threads to create.  Note:  Take the
+# number of ports:
+#
+# {(PP)} = 2 ports
+# {(PV)(VP)} = 4 ports
+# {(PV)(VV)(VP)} = 6 ports
+#
+# then multiply by number of queues per port to get optimum PMD thread count.
+#
+cpumask=3
+
+#
+# The network devices used in the test
+#
 dev1=p2p1
 dev2=p2p2
-#dev1=em2
-#dev2=em2
+
+#
+# Path for DPDK tools (for dpdk_nic_bind.py)
+#
+dpdk_tools_path="/root/perf84/dpdk/tools"
