Adding (VV) tests and different test banners

--- a/test_params.cfg
+++ b/test_params.cfg
@@ -159,11 +159,12 @@ export DB_SOCK="$prefix/var/run/openvswitch/db.sock"
 #P_dataplane=dpdk
 #P_dataplane=none
 #V_dataplane=kernel
+#V_dataplane=dpdk
 #V_dataplane=none
 #
-network_topology="{(PV),(VP)}"
-P_dataplane=dpdk
-V_dataplane=dpdk
+network_topology="{(VV)}"
+P_dataplane=none
+V_dataplane=kernel
 
 
 #
@@ -183,7 +184,7 @@ num_queues_per_port=1
 #
 # then multiply by number of queues per port to get optimum PMD thread count.
 #
-cpumask=3
+cpumask=2
 
 #
 # The network devices used in the test
@@ -194,4 +195,9 @@ dev2=p2p2
 #
 # Path for DPDK tools (for dpdk_nic_bind.py)
 #
-dpdk_tools_path="/root/perf84/dpdk/tools"
+dpdk_tools_path="/root/perf84/dpdk1607/dpdk-16.07/tools"
+
+#
+# Attempt interface driver binding.  1 = yes, 0 = no
+#
+bind_ifs=0
