minor fixes, VV tests (that don't seem to work yet), and bind update for dpdk 16.07

--- a/test_params.cfg
+++ b/test_params.cfg
@@ -13,7 +13,6 @@
 # Identify location of OpenvSwitch executables
 #
 #prefix="/usr/local"    # Used with locally built src
-#prefix=""               # Used with RPMs
 prefix=""               # Used with RPMs
 
 
@@ -164,7 +163,7 @@ export DB_SOCK="$prefix/var/run/openvswitch/db.sock"
 #
 network_topology="{(VV)}"
 P_dataplane=none
-V_dataplane=kernel
+V_dataplane=dpdk
 
 
 #
@@ -184,7 +183,7 @@ num_queues_per_port=1
 #
 # then multiply by number of queues per port to get optimum PMD thread count.
 #
-cpumask=2
+cpumask=3
 
 #
 # The network devices used in the test
