adding multi-instance and OVS 2.6 support

--- a/test_params.cfg
+++ b/test_params.cfg
@@ -12,8 +12,8 @@
 #
 # Identify location of OpenvSwitch executables
 #
-#prefix="/usr/local"    # Used with locally built src
-prefix=""               # Used with RPMs
+prefix="/usr/local"    # Used with locally built src
+#prefix=""               # Used with RPMs
 
 
 #
@@ -161,8 +161,8 @@ export DB_SOCK="$prefix/var/run/openvswitch/db.sock"
 #V_dataplane=dpdk
 #V_dataplane=none
 #
-network_topology="{(VV)}"
-P_dataplane=none
+network_topology="{(PV),(VP)}"
+P_dataplane=dpdk
 V_dataplane=dpdk
 
 
@@ -183,13 +183,16 @@ num_queues_per_port=1
 #
 # then multiply by number of queues per port to get optimum PMD thread count.
 #
-cpumask=3
+
+cpumask=FF # Get pmd thread off node 0.  try 1FE mask or taskset it off cpu 0
 
 #
 # The network devices used in the test
 #
 dev1=p2p1
 dev2=p2p2
+dev3=p1p1
+dev4=p1p2
 
 #
 # Path for DPDK tools (for dpdk_nic_bind.py)
@@ -199,4 +202,10 @@ dpdk_tools_path="/root/perf84/dpdk1607/dpdk-16.07/tools"
 #
 # Attempt interface driver binding.  1 = yes, 0 = no
 #
-bind_ifs=0
+bind_ifs=1
+
+#
+# multi_instance=1
+# multi_instance=2
+#
+multi_instance=2
