Adding ovs 2.6 and 2.5 capabilities.  Still need to test

--- a/test_params.cfg
+++ b/test_params.cfg
@@ -12,8 +12,8 @@
 #
 # Identify location of OpenvSwitch executables
 #
-prefix="/usr/local"    # Used with locally built src
-#prefix=""               # Used with RPMs
+#prefix="/usr/local"    # Used with locally built src
+prefix=""               # Used with RPMs
 
 
 #
@@ -202,10 +202,17 @@ dpdk_tools_path="/root/perf84/dpdk1607/dpdk-16.07/tools"
 #
 # Attempt interface driver binding.  1 = yes, 0 = no
 #
-bind_ifs=1
+bind_ifs=0
 
 #
 # multi_instance=1
 # multi_instance=2
 #
 multi_instance=2
+
+#
+# OVS version
+# ovs_2pt5
+# ovs_2pt6
+#
+ovs_version=2pt5
